// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataIterator.js should match a snapshot - footer slot 1`] = `

<div class="data-iterator">
  <div>
  </div>
  <div>
    <span>
      footer
    </span>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="15"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                     data-ripple="false"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="material-icons icon input-group__append-icon input-group__icon-cb"
               style="font-size: 24px;"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__pagination">
        1-3 of 3
      </div>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Previous page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Next page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - hideActions and no footer slot 1`] = `

<div class="data-iterator">
  <div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no data 1`] = `

<div class="data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No data available
    </div>
  </div>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="27"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                     data-ripple="false"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="material-icons icon input-group__append-icon input-group__icon-cb"
               style="font-size: 24px;"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__pagination">
        –
      </div>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Previous page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Next page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - no matching records 1`] = `

<div class="data-iterator">
  <div>
    <div class="text-xs-center"
         style="width: 100%;"
    >
      No matching records found
    </div>
  </div>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="1"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                     data-ripple="false"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="material-icons icon input-group__append-icon input-group__icon-cb"
               style="font-size: 24px;"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__pagination">
        –
      </div>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Previous page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Next page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
  </div>
</div>

`;

exports[`VDataIterator.js should match a snapshot - with data 1`] = `

<div class="data-iterator">
  <span>
    <div>
      b
    </div>
    <div>
      c
    </div>
    <div>
      a
    </div>
  </span>
  <div>
    <div class="data-iterator__actions">
      <div class="data-iterator__actions__select">
        Items per page:
        <div tabindex="0"
             data-uid="41"
             aria-label="Items per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Items per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                     data-ripple="false"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link"
                         data-ripple="true"
                      >
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="material-icons icon input-group__append-icon input-group__icon-cb"
               style="font-size: 24px;"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="data-iterator__actions__pagination">
        1-3 of 3
      </div>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Previous page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_left
          </i>
        </div>
      </button>
      <button disabled="disabled"
              type="button"
              class="btn btn--disabled btn--flat btn--icon"
              data-ripple="true"
              aria-label="Next page"
      >
        <div class="btn__content">
          <i aria-hidden="true"
             class="material-icons icon"
             style="font-size: 24px;"
          >
            chevron_right
          </i>
        </div>
      </button>
    </div>
  </div>
</div>

`;
